ci-operator/infra/openshift/ci-search/deploy.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: ci-search

---
kind: Service
apiVersion: v1
metadata:
  namespace: ci-search
  name: search
spec:
  selector:
    app: search
  ports:
  - port: 80
    targetPort: 8080

---
kind: Route
apiVersion: v1
metadata:
  namespace: ci-search
  name: search
spec:
  host: search.svc.ci.openshift.org
  tls:
    termination: Edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: search

---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: ci-search
  name: search
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"ci-search:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"web\")].image"}]'
spec:
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      labels:
        app: search
    spec:
      volumes:
      - name: job-config
        configMap:
          name: job-config
      - name: cache
        emptyDir: {}
      containers:
      - name: web
        image: ci-search:latest
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
        - name: job-config
          mountPath: /etc/ci-search/
        - name: cache
          mountPath: /var/lib/ci-search/
        command:
        - /usr/bin/search
        - --config=/etc/ci-search/config.yaml
        - --interval=10m
        - --path=/var/lib/ci-search/
        - --deck-url=https://prow.svc.ci.openshift.org
